# spotify-now-playing-v2

./: .gitignore  README.md  package-lock.json  package.json
src/: extra.html  index.html  main.js  nowPlaying.html  nowPlaying.js  settings.css  settings.html  settings.js  styles.css  widget.css  widget.html  widget.js
src-tauri/: .spotify_token_cache.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
