[package]
name = "spotify-now-playing"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotify_now_playing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = ["protocol-asset", "wry"] }
tauri-plugin-opener = "2"

# Spotify
rspotify = { version = "0.15.0", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
tokio-util = "0.7.16"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.3.3"
lofty = "0.22.4"
image = "0.25.6"
reqwest = "0.12.23"
windows = { version = "0.62.0", features = [
  "Foundation",
  "Media",
  "Media_Control",
  "Storage_Streams",
] }
futures = "0.3"
regex = "1"
